@@ -1,14 +1,16 @@
 Sphinx TODO
 ===========
 
-- literal search mode
+- RSS generation
+- files for downloading
 - specify node visit functions when adding nodes to app
 - allow extensions to add static files
 - decide which static files to include
 - verbose option
 - remove redundant <ul>s in tocs
 - autoattribute in autodoc
-- range and object options for literalinclude
+- section, range and object options for literalinclude
+- literal search mode
 - option for compact module index
 - HTML section numbers?
 - "seealso" links to external examples, see http://svn.python.org/projects/sandbox/trunk/seealso/ and http://effbot.org/zone/idea-seealso.htm
